@@ -5,9 +5,10 @@ import org.mtvs.backend.user.entity.User;
 import org.mtvs.backend.user.repository.UserRepository;
 import org.mtvs.backend.checklist.dto.CheckListRequest;
 import org.mtvs.backend.checklist.dto.CheckListResponse;
-import org.mtvs.backend.checklist.dto.MBTIdto;
 import org.mtvs.backend.checklist.model.CheckList;
 import org.mtvs.backend.checklist.repository.CheckListRepository;
+import org.mtvs.backend.checklist.repository.MBTIMappingRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
@@ -15,38 +16,55 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 
 @Service
 public class CheckListService {
-    private final CheckListRepository repo;
-    private final UserRepository userRepository;
 
-    public CheckListService(CheckListRepository repo, UserRepository userRepository) {
-        this.repo = repo;
-        this.userRepository = userRepository;
-    }
+    @Autowired
+    private UserRepository userRepo;
+    @Autowired
+    private CheckListRepository checkListRepo;
+    @Autowired
+    private MBTIMappingRepository mbtiMappingRepo;
 
-    public CheckListResponse create(String username, CheckListRequest req) {
-        User user = userRepository.findByUsername(username).orElseThrow(() -> new RuntimeException("User not found"));
+    // 기존 repo, userRepo 주입 생략
+
+    @Transactional
+    public CheckListResponse create(CheckListRequest req, String username) {
+        User user = userRepo.findByUsername(username)
+                .orElseThrow(() -> new UsernameNotFoundException(username));
+
         CheckList entity = new CheckList();
         entity.setUser(user);
         entity.setMoisture(req.getMoisture());
         entity.setOil(req.getOil());
         entity.setSensitivity(req.getSensitivity());
         entity.setTension(req.getTension());
+        CheckList saved = checkListRepo.save(entity);
 
-        CheckList saved = repo.save(entity);
+        String mbtiCode = getSkinTypeByEmail(user.getEmail());
+
+        // 4) 매핑 테이블에서 한글 SkinType(enum) 조회
+        User.SkinType newSkinType = mbtiMappingRepo.findById(mbtiCode)
+                .orElseThrow(() ->
+                        new IllegalStateException("Unknown MBTI code: " + mbtiCode))
+                .getSkinType();
+
+        // 5) 유저 엔티티에 세팅 후 저장
+        user.setSkinType(newSkinType);
+        user.setTroubles(req.getTroubles());
+        userRepo.save(user);
+
         return toDto(saved);
     }
 
-    public List<CheckListResponse> findAllForUser(String username) {
-        User user = userRepository.findByUsername(username).orElseThrow(() -> new RuntimeException("User not found"));
-        return repo.findByUserOrderByCreatedAtDesc(user)
-                .stream()
-                .map(this::toDto)
-                .collect(Collectors.toList());
+    @Transactional
+    public List<CheckListResponse> findAllForCurrentUser(String username) {
+        User user = userRepo.findByUsername(username)
+                .orElseThrow(() -> new UsernameNotFoundException(username));
+        return checkListRepo.findByUserOrderByCreatedAtDesc(user)
+                .stream().map(this::toDto).toList();
     }
 
     private CheckListResponse toDto(CheckList e) {
@@ -61,11 +79,14 @@ public class CheckListService {
     }
 
     public String getSkinTypeByEmail(String email) {
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + email));
-        String userId = user.getId();
+        Optional<User> user = userRepo.findByEmail(email);
+        if (user.isEmpty()) {
+            throw new UsernameNotFoundException(email);
+        }
+        User userEntity = user.get();
+        String userId = userEntity.getId();
 
-        Optional<CheckList> checkList = repo.findFirstByUser_IdOrderByCreatedAtDesc(userId);
+        Optional<CheckList> checkList = checkListRepo.findFirstByUser_IdOrderByCreatedAtDesc(userId);
 
         if (checkList.isEmpty()) {
             throw new UsernameNotFoundException(email);
@@ -83,8 +104,8 @@ public class CheckListService {
         ratings.put("tension", result.getTension() >= 60 ? "T" : "L");
 
         // 피부 타입 조합 생성 (예: MOSL, DBIL 등)
-        String skinType = ratings.get("moisture") + ratings.get("sensitivity") +
-                         ratings.get("oil") + ratings.get("tension");
+        String skinType = ratings.get("moisture") + ratings.get("oil") +
+                          ratings.get("sensitivity") + ratings.get("tension");
         System.out.println(skinType);
         return skinType;
     }
